# meteo_brain

./: .gitignore  README.md  pyproject.toml
src/meteoBrain/: meteoBrain.py
src/meteo_brain/: __init__.py  meteoBrain.py  meteo_brain.py
src/meteo_brain/data/: DBSpec.md  data_collection.py  db.py  logging.py
tests/: testBasic.py
